--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,6 +296,9 @@
   
   
   /*-------------- CONTACT --------------*/
+.contact .container {
+  margin-block-start: 30px;
+}
 
   .card-text {
     background-color: rgba(0,0,0, 0.5);
